<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/connect" />
	<item 	android:id="@+id/disconnect"
			android:icon="@android:drawable/ic_delete"
			android:title="@string/disconnect" />           
    <item android:id="@+id/manage_devices"
          android:icon="@android:drawable/ic_menu_manage"
          android:title="@string/manage_devices" ></item>    
    <item android:id="@+id/learn_mode"
          android:icon="@android:drawable/ic_input_add"
          android:title="@string/learn_button" ></item>
    <item android:id="@+id/stop_learn"
          android:icon="@android:drawable/ic_input_delete"
          android:title="Cancel Learn"
          android:visible = "false" ></item>
    <item android:id="@+id/advanced"
          android:title="More" 
          android:icon ="@android:drawable/ic_menu_more">
		<menu>
			<item android:id="@+id/rename_misc"
		          android:icon="@android:drawable/ic_menu_edit"
		          android:title="Rename Misc Button" ></item>
			 <!--<item android:title="@string/discoverable" android:id="@+id/discoverable" android:icon="@android:drawable/ic_menu_add" /> -->			 
			<item android:title="@string/get_pod_info" android:id="@+id/get_info" android:icon="@android:drawable/ic_menu_info_details" />
			<item android:title="Reset Pod" android:id="@+id/reset_pod" android:icon="@android:drawable/ic_delete" />
			<item android:title="About" android:id="@+id/about" android:icon="@android:drawable/ic_menu_info_details" />
			<item android:title="Check for firmware updates" android:id="@+id/fw_update"/>
			<item android:title="Preferences" android:id="@+id/preferences" android:icon="@android:drawable/ic_menu_preferences" />
			<item android:title="Backup to SD card" android:id="@+id/backup" android:icon="@android:drawable/ic_menu_upload" />
			<item android:title="Import from SD card" android:id="@+id/restore" android:icon="@android:drawable/ic_menu_recent_history" />
			<item android:title="Close BluMote" android:id="@+id/exit" android:icon="@android:drawable/ic_lock_power_off" />
		</menu>
	</item>
</menu>